<?xml version="1.0" encoding="utf-8"?>
<!--androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"-->
<!---->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/compact_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="16dp">
    <!-- other elements -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_recycler_view"
        android:layout_width="395dp"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/Cbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back" />


</LinearLayout>
</ScrollView>
    <!--/androidx.recyclerview.widget.RecyclerView-->