<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MockLocation">

    <EditText
        android:id="@+id/lat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:hint="Latitude"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lng_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lng_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="468dp"
        android:ems="10"
        android:hint="Longitude"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat_txt" />

    <Button
        android:id="@+id/location_done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="139dp"
        android:text="Done"
        android:onClick="onDoneClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lng_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>