<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_foreground"
        android:title="Search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/compactDayPlanner"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_day_planner_foreground"
        />
</menu>
